--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,11 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-size: 20px;
+}
+
+a {
+  text-decoration: none;
 }
 
 body {
@@ -16,27 +21,37 @@ section {
   background-color: azure;
   border-radius: 5px;
   margin: 100px;
-  margin-left: 150px;
-  margin-right: 150px;
-  padding: 30px;
+  margin-left: 0px;
+  margin-right:0px;
+  padding: 150px;
+  padding-top: 80px ;
+  padding-bottom: 80px;
 }
 
 section h1 {
   font-size: 40px;
+  margin-left: 15px;
 }
+
+section h2 {
+  margin-left: 15px;
+}
+
 
 section .servicos {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-around;
+
 }
 
 section .servico {
-  margin: 20px;
+  margin: 40px;
   display: flex;
   flex-direction: column;
   border-radius: 10px;
-  width: 350px;
-  background-color: beige;
+  width: 450px;
+  background-color: lightblue;
   padding: 10px;
   font-size: 20px;
   box-shadow: 5px 5px 10px slategrey;
@@ -45,11 +60,12 @@ section .servico {
 
 section img {
   border-radius: 10px;
-  width: 325px;
-  height: 300px;
+  width: auto;
+  margin-bottom: 30px;
 }
 
 section p {
+  margin: 15px;
   text-indent: 40px;
   text-align: justify;
   text-justify: inter-word;
@@ -62,6 +78,7 @@ section p {
   width: 100vw;
   top: 0;
   z-index: 1;
+  font-size: initial;
 }
 
 .menu img {
@@ -91,4 +108,10 @@ section p {
 .menu .btns:hover {
   background-color: teal;
   color: white;
+}
+
+.contato a {
+    color: black;
+    font-size: 4em;
+    transition: text-shadow 1s;
 }
