--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ a {
 }
 
 body {
-  background-color: antiquewhite;
+  background-color: dodgerblue;
   font-family: "Rubik Mono One", monospace;
   height: 100vh;
   font-size: 12px;
